# wectr

./: .clang-format  .gitmodules  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
crates/wectr-sdk/: Cargo.toml
crates/wectr-sdk/src/: channel.rs  lib.rs  rt.rs
examples/bot/: Cargo.toml
examples/bot/src/: lib.rs
examples/host/: main.c
host/: CMakeLists.txt  wectr.c  wectr.h
